[package]
name = "ecies-ed25519-ng"
version = "0.5.2"
authors = ["phayes <patrick.d.hayes@gmail.com>", "Revertron <github@revertron.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "ECIES on Twisted Edwards Curve25519 using AES-GCM and HKDF-SHA256"
categories = ["cryptography"]
keywords = ["ecies", "encryption", "ed25519", "curve25519", "aes-gcm"]
repository = "https://github.com/Revertron/ecies-ed25519-ng"
readme = "README.md"

[dependencies]
rand = "0.8.5"
curve25519-dalek = { version = "4.1.1", features = ["legacy_compatibility"] }
thiserror = "1.0.56"
hex = "0.4.3"
zeroize = "1.6.0"
# "serde" feature
serde = { version = "1.0.125", optional = true }
# "ring" feature
ring = { version = "0.17.7", optional = true, features = [] }
# "pure_rust" feature
aes-gcm = { version = "0.9.4", optional = true }
sha2 = { version = "0.10.8", optional = true }
digest = { version = "0.10.7", optional = true }
hkdf = { version = "0.12.4", optional = true }

[features]
default = ["pure_rust"]
pure_rust = ["aes-gcm", "sha2", "digest", "hkdf"]

[dev-dependencies]
serde_json = "1.0.64"
serde_cbor = "0.11.1"
